# Email-Gatekeeper

./: .gitattributes  Dockerfile  README.md  app.py  env.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_cases_advanced.json
ai_server_admin/: Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
ai_server_admin/server/: __init__.py  ai_server_admin_environment.py  app.py
cdk/: app.py  email_gatekeeper_stack.py
lambda/: classifier.py  handler.py
sagemaker/: classifier.py  deploy.py  inference.py  package.py  requirements.txt  upload_to_hf.py
server/: app.py  env.py
